2023/day-two/src/snapshots/day_two__test__snapshot_game_parse.snap
---
source: day-two/src/main.rs
expression: "Game::parse(input_1)"
---
Ok(
    (
        "",
        Game {
            game_num: 1,
            hands: [
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 3,
                            color: Blue,
                        },
                        ColorCount {
                            count: 4,
                            color: Red,
                        },
                    ],
                },
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 1,
                            color: Red,
                        },
                        ColorCount {
                            count: 2,
                            color: Green,
                        },
                        ColorCount {
                            count: 6,
                            color: Blue,
                        },
                    ],
                },
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 2,
                            color: Green,
                        },
                    ],
                },
            ],
        },
    ),
)
